--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,12 @@ h6 {
   background-color: rgba(0,0,0.9);
 }
 
+#trash {
+  background-color: grey;
+}
+
 .bottom-trash {
-  opacity: 0;
+  opacity: 1;
   color: #f1f1f1;
   font-size: 2.3rem;
   font-family: "Staatliches", sans-serif;
@@ -60,4 +64,5 @@ h6 {
 
 .btn-add:hover, .btn-save:hover, .btn-close:hover, .btn-delete:hover {
   background-position: 1px -50px;
+  transform: translateY(-150px);
 }
